tdf#104222: Put expensive debug code behind #if again

dump_pset calls very expensive SdGenericDrawPage::getPropertyValue
doing something with GDIMetaFiles.

(regression from 5c7ce42dfc35d9cceef5f05a96e813b4e3913d38)

(cherry picked from commit 9cbe69f1950115e47af693bd78fc78f96f9b508e)

Change-Id: If39e9a451c87754343d77c8a1f840153c6b9de80